--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         <label for="color">Color</label>
         <input id="color" name="color" type="color" />
         <label for="lineWidth">Line Width</label>
-        <input id="lineWidth" name="lineWidth" type="range" min="2" />
+        <input id="lineWidth" name="lineWidth" type="range" min="2" max="100" />
         <button id="clear">Clear</button>
         <label id="Fill" for="fill">Fill</label>
         <button id="Fill">
           <img src="./fillicon.png" alt="" />
         </button>
+        Developed By- Moran ♥ Habooba
       </div>
     </div>
-    <canvas id="canvas"></canvas>
+
+    <canvas id="canvas"> </canvas>
   </body>
 </html>
