--- a/index.html
+++ b/index.html
@@ -19,9 +19,25 @@
         <button id="clear">Clear</button>
         <label id="Fill" for="fill">Fill</label>
         <button id="Fill">
-          <img src="./fillicon.png" alt="" />
+          <img id="fillImage" src="./fillicon.png" alt="fillicon." />
         </button>
-        Developed By- Moran ♥ Habooba
+        <label for="eraser">Eraser</label>
+        <button id="eraser">
+          <img src="./254686.png" alt="Eraser" />
+        </button>
+        <label for="eraserSize">Eraser Size</label>
+        <input
+          id="eraserSize"
+          name="eraserSize"
+          type="range"
+          min="1"
+          max="50"
+          value="10"
+        />
+        <button id="pencil">
+          <img src="./הורדה.png" alt="Pencil" />
+        </button>
+        <span style="color: black"> Developed By- Moran ♥ Habooba</span>
       </div>
     </div>
 
